# nodecosmos_server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.MD  README.md  appspec.yml  config.development.toml  config.production.toml  config.toml  current_schema.json  docker-compose.yml  heaptrack.nodecosmos.25102.zst  import.json  import_ai.json  scylla-entrypoint.sh
charybdis_cmd/migration/: Cargo.toml
charybdis_cmd/migration/src/: migration_cli.rs  session.rs
charybdis_cmd/migration/src/migration/: migration.rs  migration_plan.rs  migration_runner.rs  mod.rs
charybdis_cmd/migration/src/schema/: current_code_schema.rs  current_db_schema.rs  mod.rs  model_file_ast_parser.rs  parser.rs  schema.rs
macros/: Cargo.toml
macros/src/: lib.rs
nodecosmos/: Cargo.toml  current_schema.json
nodecosmos-macros/: Cargo.toml
nodecosmos-macros/src/: lib.rs  traits.rs
nodecosmos/doc/: Elastic.md  Macro.md  Memory.md  Models.MD  Perf.md  Scylla.md  Security.md  Struct.md  Syn.md
nodecosmos/src/: app.rs  callback_extension.rs  client_session.rs  constants.rs  errors.rs  main.rs  nodecosmos.rs  session_store.rs  stream.rs  tasks.rs  test.rs
nodecosmos/src/actions/: attachment_actions.rs  client_session.rs  commit_actions.rs  contribution_request_actions.rs  flow_actions.rs  flow_step_actions.rs  input_outputs_actions.rs  like_actions.rs  mod.rs  node_actions.rs  session_actions.rs  user_actions.rs  users_actions.rs  workflow_actions.rs  workflow_step_actions.rs
nodecosmos/src/actions/helpers/: edit_context.rs  mod.rs
nodecosmos/src/actions/types/: action_types.rs  mod.rs
nodecosmos/src/actions/ws/: description_pool.rs  mod.rs  node_description.rs
nodecosmos/src/api/: attachment_api.rs  branch_api.rs  comment_api.rs  contact_api.rs  contribution_request_api.rs  description_api.rs  description_pool_api.rs  flow_api.rs  flow_step_api.rs  input_output_api.rs  invitation_api.rs  like_api.rs  mod.rs  node_api.rs  notification_api.rs  session_api.rs  subscription_api.rs  task_api.rs  user_api.rs  workflow_api.rs
nodecosmos/src/api/authorization/: contribution_request_authorizer.rs  node_authorizer.rs
nodecosmos/src/api/request/: current_user.rs  data.rs  mod.rs
nodecosmos/src/api/types/: action_types.rs  mod.rs  response.rs
nodecosmos/src/api/ws/: description_pool.rs
nodecosmos/src/authorize/: contribution_request.rs  contribution_request_authorizer.rs  mod.rs  node_authorizer.rs  user_authorizer.rs  workflow_authorizer.rs
nodecosmos/src/db/: session.rs
nodecosmos/src/elastic/: build.rs  document.rs  mod.rs  nodes.rs  users.rs
nodecosmos/src/elastic/indices/: mod.rs  nodes.rs  users.rs
nodecosmos/src/models/: README.MD  README.md  archived_description.rs  archived_flow.rs  archived_flow_step.rs  archived_io.rs  archived_node.rs  archived_workflow.rs  attachment.rs  branch.rs  comment.rs  comment_thread.rs  commit.rs  contact.rs  contribution_request.rs  description.rs  description_commit.rs  flow.rs  flow_commit.rs  flow_step.rs  flow_step_commit.rs  input_output.rs  input_output_commit.rs  input_output_template.rs  invitation.rs  io.rs  like.rs  likes_count.rs  mod.rs  node.rs  node_commit.rs  node_counter.rs  node_descendant.rs  node_descendants_commit.rs  node_tree_position_commit.rs  notification.rs  post.rs  recovery.rs  subscription.rs  task.rs  (+19 more)
nodecosmos/src/models/branch/: conflict.rs  edit.rs  merge.rs  update.rs
nodecosmos/src/models/comment/: callbacks.rs  create.rs
nodecosmos/src/models/commit/: callbacks.rs  node_commit.rs  types.rs  workflow_commit.rs
nodecosmos/src/models/contribution_request/: callbacks.rs  create.rs  status.rs  statuses.rs  update.rs
nodecosmos/src/models/description/: save.rs  update.rs
nodecosmos/src/models/flow/: callbacks.rs  create.rs  update_title.rs
nodecosmos/src/models/flow_step/: callbacks.rs  create.rs  delete.rs  flow_steps_by_index.rs  update.rs  update_input_ids.rs  update_node_ids.rs  update_output_ids.rs
nodecosmos/src/models/helpers/: default_callbacks.rs  defaults.rs  impl_default_callbacks.rs  mod.rs  node_callbacks.rs  plucker.rs  set_updated_at.rs  user_callbacks.rs
nodecosmos/src/models/input_output/: callbacks.rs  create.rs  delete.rs  update_description.rs  update_title.rs
nodecosmos/src/models/io/: create.rs  delete.rs  update_title.rs
nodecosmos/src/models/like/: callbacks.rs  create.rs  likeable.rs
nodecosmos/src/models/materialized_views/: auth_node_by_id.rs  base_ios_by_root_node_id.rs  child_ids_by_parent_id.rs  input_outputs_by_root_node_id.rs  likes_by_user.rs  mod.rs  nodes_by_creator.rs  nodes_by_owner.rs  users_by_email.rs  users_by_username.rs
nodecosmos/src/models/node/: auth.rs  callbacks.rs  context.rs  cover_image_uploader.rs  create.rs  create_node.rs  delete.rs  delete_node.rs  import.rs  node_tree.rs  node_tree_handler.rs  reorder.rs  search.rs  sort.rs  subscription.rs  update_cover_image.rs  update_creator.rs  update_description.rs  update_description_node.rs  update_owner.rs  update_title.rs  update_title_node.rs
nodecosmos/src/models/node_commit/: create.rs  reorder.rs
nodecosmos/src/models/node_partials/: mod.rs  update_description_node.rs  update_title_node.rs
nodecosmos/src/models/traits/: README.md  authorization.rs  branchable.rs  clean.rs  collections.rs  context.rs  descriptionable.rs  find_branched.rs  group.rs  id.rs  merge.rs  merge_description.rs  mod.rs  model.rs  pluck.rs  primitives.rs  query.rs  sanitize_description.rs
nodecosmos/src/models/udts/: address.rs  assigned_task.rs  branch_reorder_data.rs  conflict.rs  creator.rs  mod.rs  owner.rs  profile.rs  property.rs  snapshot.rs  text_change.rs
nodecosmos/src/models/user/: callbacks.rs  current_user.rs  (+3 more)
nodecosmos/src/resources/: description_ws_pool.rs  email_client.rs  gsc.rs  mailer.rs  mod.rs  resource.rs  resource_locker.rs  sse_broadcast.rs  ws_broadcast.rs
nodecosmos/src/services/: flow_step_idx_calculator.rs  image.rs  logger.rs  mod.rs  resource_locker.rs  serializer.rs
nodecosmos/src/utils/: cloned_ref.rs  defaults.rs  deserializer.rs  image.rs  logger.rs  mod.rs
(+420 files in other folders)
