[package]
name = "nodecosmos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.28"
scylla = "0.12.0"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
toml = "0.8.2"
chrono = "0.4.24"
actix-web = {version = "4.3.1", features = ["cookies"]}
actix-session = { version = "0.8.0", features = ["redis-actor-session"] }
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
env_logger = "0.10.0"
bcrypt = "0.15.0"
colored = "2.0.0"
ammonia = "3.3.0"
elasticsearch = "8.4.0-alpha.1"
deadpool-redis = "0.13.0"
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"
image = "0.24.7"
mozjpeg = "0.10.0"
actix-web-actors = "4.2.0"
actix = "0.13.1"
dashmap = "5.5.3"
bytestring = "1.3.0"
charybdis = "0.4.0"
yrs = "0.17.2"
base64 = "0.21.5"
uuid = "1.6.1"
quick-xml = "0.31.0"
