[package]
name = "macros"
edition = "2021"
description = "Proc macros for the nodecosmos project"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.71", default-features = false, features = ["derive"] }
quote = { version = "1.0.36", default-features = false }
log = "0.4.22"
darling = "0.20.10"
