[package]
name = "nodecosmos-macros"
edition = "2021"
description = "Proc macros for the nodecosmos project"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
syn = { version = "2.0.71", features = ["full"] }
quote = "1.0.36"
log = "0.4.22"
darling = "0.20.10"
uuid = { version = "1.10.0", features = ["v4"] }
