[package]
name = "nodecosmos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.30"
scylla = { version = "0.15.0", features = ["ssl"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
toml = "0.8.14"
chrono = "0.4.38"
actix-web = { version = "4.9.0", features = ["cookies"] }
actix-session = { version = "0.10.1", features = ["redis-session"] }
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
env_logger = "0.11.3"
bcrypt = "0.16.0"
colored = "2.1.0"
ammonia = "4.0.0"
elasticsearch = "8.5.0-alpha.1"
deadpool-redis = "0.18.0"
aws-config = "1.5.4"
aws-sdk-s3 = "1.41.0"
aws-sdk-ses = "1.36.0"
image = "0.25.1"
mozjpeg = "0.10.7"
actix-web-actors = "4.3.0"
actix = "0.13.3"
dashmap = "6.0.1"
charybdis = "0.7.9"
yrs = "0.21.1"
base64 = "0.22.1"
uuid = "1.8.0"
quick-xml = "0.37.0"
log = "0.4"
macros = { path = "../macros" }
strum = "0.26.3"
strum_macros = "0.26.4"
anyhow = "1.0.86"
rand = "0.8.5"
lettre = "0.11"
handlebars = "6.1.0"
email_address = "0.2.5"
reqwest = { version = "0.12.5", features = ["json"] }
rustrict = "0.7.26"
openssl = "0.10.64"
time = "0.3.37"
