[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[dependencies]
charybdis_parser = { path = "../../charybdis_parser" }
dotenv = "0.15.0"
scylla = "0.8.0"
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
colored = "2.0.0"
walkdir = "2.3.3"
structopt = "0.3.26"
quote = "1.0.26"
syn = { version = "2.0.10", features = ["full"] }
futures = "0.3.28"
strip-ansi-escapes = "0.1.1"

[[bin]]
name = "migration"
path = "src/migration_cli.rs"
